--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ theme: jekyll-theme-slate
 show_downloads: true
 github:
   zip_url: https://github.com/Diami-Games/JungleMungle/releases/latest
+  tar_url: https://github.com/Diami-Games/JungleMungle/releases/latest
