--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,4 @@ show_downloads: true
 github:
   zip_url: https://github.com/Diami-Games/JungleMungle/releases/latest
   tar_url: https://github.com/Diami-Games/JungleMungle/releases/latest
+google_analytics: UA-171811369-1
